# 
# Further details on the project are available at : 
#     http://www.postfixadmin.com or http://postfixadmin.sf.net 
#
# Last update:
# $Id$

SVN changes since 2.3.4 release (postfixadmin-2.3 branch)
----------------------------------------------------------------

  - create-domain: fix SQL injection (only exploitable by superadmins)
  - add missing $LANG['pAdminDelete_admin_error']

Version 2.3.4 - 2011/09/16 - SVN r1180 (postfixadmin-2.3 branch)
----------------------------------------------------------------

  - generate more secure random passwords
  - squirrelmail plugin: fix typo in variable name
  - list-domain: fix SELECT query to work with PgSQL even when using custom fields
  - create-domain: force domain name to lowercase to avoid problems with PgSQL
    foreign keys
  - fix vacation.pl to log to "mail" syslog facility
  - error_log() dovecotpw error messages

Version 2.3.3 - 2011/03/14 - SVN r1010 (postfixadmin-2.3 branch)
----------------------------------------------------------------

  - create-alias: allow multiple alias targets
  - create-alias, edit-alias: prevent input data loss on validation errors
  - list-virtual: fix displaying of 'modified' column for aliases when using
    postgres
  - replaced deprecated split() with preg_split() or explode()
  - functions.inc.php: better error messages when database functions are missing
  - create domain: fixed typo in variable name that broke the default value for
    default aliases
  - postgres: changed mailbox.quota, domain.quota and domain.maxquota fields
    to bigint to allow mailboxes >4 GB (run setup.php to upgrade your database)
  - vacation.pl logged literal $variable instead of the variable content at two
    places
  - edit-vacation: log enabling/disabling vacation if done by admins
  - POSTFIX_CONF.txt: fixed filename for quota map
  - config.inc.php: removed double $CONF['database_prefix']
  - config.inc.php: fixed comments about domain_post* script parameters